# 10xProductivity

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LEGAL_NOTICE.md  README.md  SETUP.md  add-new-tool.md  contributing.md  env.sample  project-idea.md  pyproject.toml  requirements.txt  setup-python.md  setup.md  verified_connections.example.md
.claude/commands/: enterprise-search.md
.cursor/hooks/: check-git-author.sh
.cursor/rules/: tool-connector.md
add-new-connection/: SKILL.md
colleagues/: README.md
community/: README.md  TEMPLATE.md  artifactory-api-token.md  backstage-api-token.md  bitbucket-server-api-token.md  datadog-api-key.md  jenkins-api-token.md
community/artifactory/: api-token-ZhixiangLuo.md  api-token-luo.md
community/datadog/: api-key-ZhixiangLuo.md
contribute-connection/: SKILL.md
create-connection/: SKILL.md
hooks/: pre-commit  pre-push
personal/: README.md
runtime/: README.md  __init__.py  env.py  events.py  host.py  replies.py
staging/: README.md
staging/_example/: setup.md  (+2 more)
tests/: test_google_ai_mode.py  test_runtime_host.py  test_scheduled_jobs.py
tool_connections/: README.md  SKILL.md  confluence-api-token.md  confluence.md  env.sample  github.md  google-drive-browser-session.md  google-drive.md  grafana-sso-session.md  grafana.md  jira-api-token.md  jira.md  microsoft-teams-personal-sso-session.md  microsoft-teams-sso-session.md  microsoft-teams.md  outlook-com-api-token.md  outlook-sso-session.md  pagerduty.md  slack-sso-session.md  slack.md
triggers/: README.md  __init__.py
utils/: generate_verified.py
(+137 files in other folders)
