[project]
name = "tenx-productivity"
version = "0.1.0"
description = "Personal AI assistant runtime, tool connections, and workflows for coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.58.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "msal>=1.35.0",
  "PyJWT>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
10x-host = "runtime.host:main"
10x-reply = "runtime.replies:main"
10x-standup-prep = "runtime.scheduling.standup_prep:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "triggers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
